--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 astroid==2.2.4
 autopep8==1.4.3
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.1.7
 django-bootstrap4==0.0.8
+django-toolbelt==0.0.1
 entrypoints==0.3
 flake8==3.7.7
 flake8-docstrings==1.3.0
@@ -12,6 +14,7 @@ isort==4.3.10
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==5.4.1
+pkg-resources==0.0.0
 psycopg2==2.7.7
 psycopg2-binary==2.7.7
 pycodestyle==2.5.0
@@ -24,6 +27,7 @@ python-decouple==3.1
 pytz==2018.9
 six==1.12.0
 snowballstemmer==1.2.1
+static3==0.7.0
 typed-ast==1.3.1
 whitenoise==4.1.2
 wrapt==1.11.1
